<resources>
    <string name="app_name">KnowmeApp</string>
    <string name="splash_name">KnowMe!</string>
    <string name="splash_hash_tag">Your personalised Business Card manager</string>
    <string name="activity_login_bt_login">Login</string>
    <string name="activity_login_no_account_yet">No Account yet?</string>
    <string name="activity_login_bt_sign_up">Signup</string>
    <string name="activity_login_hint_username">Username</string>
    <string name="activity_login_hint_password">********</string>
    <string name="activity_register_bt_register">Register</string>
    <string name="activity_register_hint_password">Password</string>
    <string name="activity_register_hint_confirm_password">Confirm passoword</string>
    <string name="activity_register_hint_full_name">Full name</string>
    <string name="activity_register_hint_email">Email</string>
    <string name="activity_register_already_have_account">Already have an Account?</string>
    <string name="activity_home_error">Unable to load folders</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_home_activity_home">Home</string>
    <string name="menu_home_activity_tags">Tags</string>
    <string name="menu_home_activity_settings">Settings</string>
    <string name="authentication_field_empty">Field cannot be empty</string>
    <string name="authenctication_error_username_empty_between_email">Email cannot contain spaces</string>
    <string name="authentication_error_invalid_email">Invalid Email Address</string>
    <string name="login_dialog_message">Logging you in, please wait...</string>
    <string name="login_invalid_username_password">Invalid email/password</string>
    <string name="register_password_does_not_match">Password does not match</string>
    <string name="register_something_went_wrong">Something went wrong</string>
    <string name="register_dialog_message">Creating your account, Please wait...</string>
    <string name="hint_comment">Type your notes here</string>
    <string name="activity_profile_details_add_notes">Add notes</string>
    <string name="details">Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_settings_bt_logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="add_business_card">Add business card</string>
</resources>
