<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:isScrollContainer="true">


    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="48dp"
            android:text="@string/splash_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/black_border"
            android:hint="@string/activity_login_hint_username"
            android:minHeight="36dp"
            android:padding="8dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/black_border"
            android:hint="@string/activity_login_hint_password"
            android:inputType="textPassword"
            android:padding="8dp" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/green_background_button"

            android:minHeight="48dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/activity_login_bt_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="48dp"
            android:text="@string/activity_login_no_account_yet"
            android:textSize="16sp" />

        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/deep_black" />

        <TextView
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:id="@+id/tv_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_bt_sign_up"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />


    </LinearLayout>


</ScrollView>